# CoWriter-S2_2023

./: .env.example  .gitignore  CHANGELOG.md  CNNbased.py  Dockerfile  Makefile  README.md  base.Dockerfile  base_lite.Dockerfile  bluering_lite.Dockerfile  docker-compose.development.yml  docker-compose.production.yml  environment.txt  main.py  notes.txt  readme.md  requirements.txt  robot.Dockerfile  ssim_similarity.py  strokes.json  translation-ros.md
resources/NAOHW-Boxjelly/src/cowriter_letter_learning/letter_learning_interaction/: CMakeLists.txt  package.xml
resources/NAOHW-Boxjelly/src/cowriter_letter_learning/letter_learning_interaction/include/: shape_modeler.py
resources/NAOHW-Boxjelly/src/cowriter_letter_learning/letter_learning_interaction/msg/: Shape.msg
resources/bluering_letter_learning/: .gitignore  CMakeLists.txt  README.md  cmd.sh  package.xml  setup.py
resources/bluering_letter_learning/launch/: cowriter.launch  display_manager_server.launch  word_card_detector.launch
resources/bluering_letter_learning/msg/: ActionToDo.msg
resources/bluering_letter_learning/nodes/: command_identifier.py  diagram_manager.py  display_manager_server.py  tablet_input_interpreter.py  test_audio_capturer.py  writing_surface_positioner.py
resources/bluering_letter_learning/src/bluering_letter_learning/: state_machine.py  watchdog.py
resources/bluering_letter_learning/src/bluering_letter_learning/utils/: motion.py  shape_display_manager.py  text_shaper.py
src/bluering_letter_learning/: package.xml  setup.cfg  setup.py
src/bluering_letter_learning/bluering_letter_learning/: diagram_manager.py  display_manager_server.py  interactive_learning.py  tablet_input_interpreter.py  watchdog_clearer.py  word_card_detector.py
src/bluering_letter_learning/bluering_letter_learning/include/: interaction_settings.py  state_machine.py  watchdog.py
src/bluering_letter_learning/bluering_letter_learning/include/bluering_letter_learning/: interaction_settings.py
src/bluering_letter_learning/bluering_letter_learning/include/controllers/: robot_controller.py  ros_callback_controller.py  state_controller.py
src/bluering_letter_learning/bluering_letter_learning/include/utils/: motion.py  shape_display_manager.py  shape_helper.py  text_shaper.py  writing_helper.py
src/bluering_letter_learning/bluering_letter_learning/scripts/: countShapes.py  showShapes.py
src/bluering_letter_learning/launch/: cowriter copy.launch  cowriter.launch  cowriter.launch.py  diagram_manager.launch  interactive_learning.launch  tablet_input_interpreter.launch
src/choose_adaptive_words/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/choose_adaptive_words/choose_adaptive_words/: ChildProfile.py  ai_image.py  audio_processor.py  backend.py  child_profile.py  child_ui.py  child_ui_bridge.py  input_interpreter.py  letters.py  manager_ui.py  manager_ui_bridge.py  parameters.py  strugg_letter.py  temp_backend.py
src/choose_adaptive_words/choose_adaptive_words/app/: __init__.py
src/choose_adaptive_words/choose_adaptive_words/app/child/: __init__.py  routes.py
src/choose_adaptive_words/choose_adaptive_words/app/manager/: __init__.py  routes.py
src/choose_adaptive_words/choose_adaptive_words/launch/: adaptive.launch.py
src/choose_adaptive_words/choose_adaptive_words/tests/: test_audio_processor.py  test_audio_processor.test
src/choose_adaptive_words/launch/: launch_adaptative.py
src/choose_adaptive_words/nodes/: ChildProfile.py  child_ui.py  manager_ui.py  temp_backend.py
src/choose_adaptive_words/tests/: test_audio_processor.py
src/cowriter_letter_learning/letter_learning_interaction/: CMakeLists.txt  README.md  display_manager_server.py  learning_words_nao.py  package.xml  setup.py  shape_display_manager.py  tablet_input_interpreter.py  watchdog_clearer.py  word_card_detector.py
src/cowriter_letter_learning/letter_learning_interaction/include/: gpt_word_generator.py  interaction_settings.py  nao_controller.py  nao_settings.py  phrase_manager.py  shape_display_manager.py  shape_learner.py  shape_learner_manager.py  shape_modeler.py  state_machine.py  text_shaper.py  watchdog.py  wrapper_class.py
src/cowriter_letter_learning/letter_learning_interaction/launch/: cowriter.launch.py  launch_cowrtier.py  nao_learning.launch
src/cowriter_letter_learning/letter_learning_interaction/nodes/: display_manager_server.py  learning_words_nao.py  learning_words_nao__new.py  tablet_input_interpreter.py  watchdog_clearer.py  word_card_detector.py
src/cowriter_letter_learning/letter_learning_interaction/scripts/: count_shapes.py  show_shapes.py  word_log_to_svg.py
src/cowriter_letter_learning/letter_learning_interaction/tests/: test_display_manager_server.py  test_display_manager_server.test  test_learning_words_nao.test  test_nao_settings.test  test_shape_counter.test  test_shape_display_manager.py  test_shape_display_manager.test  test_show_shapes.py  test_state_machine.py  test_state_machine.test  test_tablet_input_interpreter.py  test_tablet_input_interpreter.test  test_watchdog.py
src/nao_trajectory_following/: CMakeLists.txt  CMakeLists_new.txt  README.md  package.xml  setup.cfg  setup.py
src/nao_trajectory_following/nao_trajectory_following/: nao_writer_naoqi.py  trajectory_visualizer.py  writing_surface_positioner.py
src/nao_trajectory_following/nao_trajectory_following/launch/: trajectory.launch.py
src/nao_trajectory_following/nao_trajectory_following/tests/: test_nao_writer_naoqi.py
src/nao_trajectory_following/nodes/: nao_writer_naoqi.py  trajectory_visualizer.py  writing_surface_positioner.py
src/nao_trajectory_following/tests/: test_nao_writer_naoqi.test  test_trajectory_visualizer.py  test_trajectory_visualizer.test
src/speech_recognition/: package.xml  setup.py
src/speech_recognition/config/: speech_recognition.yaml  speech_recongition.yaml
src/speech_recognition/launch/: speech_recognition.launch.py
src/speech_recognition/speech_recognition/: speech_recognition.py
src/speech_recognition/speech_recognition/include/: audio_stream.py  google_cloud.py
(+118 files in other folders)
