<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bluering_letter_learning</name>
  <version>0.1.0</version>
  <description>A package for nodes which allow for user interaction around the shape_learning library.</description>
  
  <maintainer email="deanna.m.good@gmail.com">Deanna Hood</maintainer>
  
  <license>MIT</license>

  <author email="deanna.m.good@gmail.com">Deanna Hood</author>

  <depend>rospy</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
