<?xml version="1.0"?>
<package format="3">
  <name>choose_adaptive_words</name>
  <version>0.0.0</version>
  <description>The choose_adaptive_words package</description>

  <maintainer email="asselbor@todo.todo">asselbor</maintainer>

  <license>TODO</license>

  <!-- Dependencies can be build, build_export, exec, test, or doc -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- This tag can be used for exporting information for other tools -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
